--- a/src/app/tournaments-create/tournaments-create.component.html
+++ b/src/app/tournaments-create/tournaments-create.component.html
@@ -6,27 +6,27 @@
             <mat-card-subtitle>Subtitle... test test</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
-            <form class="example-form">
+            <form class="create-form" [formGroup]="createForm" (ngSubmit)="submit(createForm.value)">
                 <mat-form-field class="example-full-width">
                     <mat-label>Name</mat-label>
-                    <input matInput>
+                    <input matInput formControlName="name">
                 </mat-form-field>
                 
                 <mat-form-field class="example-full-width">
                     <mat-label>Choose a date</mat-label>
-                    <input matInput [matDatepicker]="picker">
+                    <input matInput [matDatepicker]="picker" formControlName="date">
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width">
                     <mat-label>Place</mat-label>
-                    <input matInput>
+                    <input matInput formControlName="place">
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width">
                     <mat-label>Type selection</mat-label>
-                    <mat-select [(value)]="singles">
+                    <mat-select [(value)]="singles" formControlName="is_singles">
                         <mat-option value="true">Singles</mat-option>
                         <mat-option value="false">Doubles</mat-option>
                     </mat-select>
@@ -34,32 +34,37 @@
 
                 <mat-form-field class="example-full-width">
                     <mat-label>Gender selection</mat-label>
-                    <mat-select [(value)]="gender">
-                        <mat-option value="option1">Man</mat-option>
-                        <mat-option value="option2">Women</mat-option>
-                        <mat-option value="option3">Mixed</mat-option>
+                    <mat-select [(value)]="gender" formControlName="type">
+                        <mat-option value="M">Man</mat-option>
+                        <mat-option value="W">Women</mat-option>
+                        <mat-option value="MW">Mixed</mat-option>
                     </mat-select>
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width">
                     <mat-label>Capacity</mat-label>
-                    <input type="number" matInput>
+                    <input type="number" matInput formControlName="capacity">
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width">
                     <mat-label>Winner prize (EUR - €)</mat-label>
-                    <input type="number" matInput>
+                    <input type="number" matInput formControlName="prize">
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width">
                     <mat-label>Registration cost (EUR - €)</mat-label>
-                    <input type="number" matInput>
+                    <input type="number" matInput formControlName="cost">
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width mt-4">
                     <mat-label>Sponsors (optional)</mat-label>
-                    <input matInput>
+                    <input matInput formControlName="sponsors">
                 </mat-form-field>
+
+                <mat-card-actions class="ml-1">
+                    <button mat-raised-button type="submit" color="primary">Create</button>
+                    <button mat-raised-button type="reset" color="secondary">Reset</button>
+                </mat-card-actions>
             </form>
         </mat-card-content>
     </mat-card>
