--- a/src/app/tournaments-all/tournaments-all.component.html
+++ b/src/app/tournaments-all/tournaments-all.component.html
@@ -4,7 +4,7 @@
             <mat-card>
                 <mat-card-header>
                     <div mat-card-avatar class="future"></div>
-                    <mat-card-title>Future Tournaments</mat-card-title>
+                    <mat-card-title>Next Tournaments</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
                     <mat-list *ngFor="let future of futureData">
