--- a/src/tennis-theme.scss
+++ b/src/tennis-theme.scss
@@ -13,7 +13,7 @@ $candy-app-primary: mat-palette($mat-light-blue);
 $candy-app-accent:  mat-palette($mat-green, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn:    mat-palette($mat-grey);
+$candy-app-warn:    mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
