--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="spacing10">
       <a mat-button [routerLink]="'/dashboard'">Home</a>
       <a mat-button [matMenuTriggerFor]="menu"> Tournaments &#9660;</a>
-      <a mat-button [routerLink]="'/test'"> Statisctics </a>
+      <a mat-button [routerLink]="'/test'"> Statistics </a>
     </div>
 
     <span class="filler"></span>
