--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
       <a mat-button [routerLink]="'/dashboard'">Home</a>
       <a mat-button [matMenuTriggerFor]="menu"> Tournaments &#9660;</a>
       <a mat-button [routerLink]="'/test'"> Statistics </a>
+      <a mat-button [routerLink]="'/admin'"> Admin </a>
     </div>
 
     <span class="filler"></span>
