--- a/src/app/tournaments-all/tournaments-all.component.html
+++ b/src/app/tournaments-all/tournaments-all.component.html
@@ -7,9 +7,20 @@
                     <mat-card-title>Next Tournaments</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <mat-list *ngFor="let future of futureData">
-                        <mat-list-item> {{future}} </mat-list-item>
-                    </mat-list>
+                    <table mat-table [dataSource]="nextDataSource">
+                        <ng-container matColumnDef="name">
+                            <th mat-header-cell *matHeaderCellDef>Name</th>
+                            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="date_from">
+                            <th mat-header-cell *matHeaderCellDef>Date To</th>
+                            <td mat-cell *matCellDef="let element">{{element.date_from}}</td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayNext"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayNext;"></tr>
+                    </table>
                 </mat-card-content>
             </mat-card>
         </div>
@@ -20,9 +31,20 @@
                     <mat-card-title>Current Tournaments</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <mat-list *ngFor="let current of currentData">
-                        <mat-list-item> {{current}} </mat-list-item>
-                    </mat-list>
+                    <table mat-table [dataSource]="currentDataSource">
+                        <ng-container matColumnDef="name">
+                            <th mat-header-cell *matHeaderCellDef>Name</th>
+                            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="date_to">
+                            <th mat-header-cell *matHeaderCellDef>Date To</th>
+                            <td mat-cell *matCellDef="let element">{{element.date_to}}</td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayCurrent"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayCurrent;"></tr>
+                    </table>
                 </mat-card-content>
             </mat-card>
         </div>
@@ -33,9 +55,20 @@
                     <mat-card-title>Past Tournaments</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <mat-list *ngFor="let past of pastData">
-                        <mat-list-item> {{past}} </mat-list-item>
-                    </mat-list>
+                    <table mat-table [dataSource]="pastDataSource">
+                        <ng-container matColumnDef="name">
+                            <th mat-header-cell *matHeaderCellDef>Name</th>
+                            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="date_to">
+                            <th mat-header-cell *matHeaderCellDef>Date From</th>
+                            <td mat-cell *matCellDef="let element">{{element.date_to}}</td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayPast"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayPast;"></tr>
+                    </table>
                 </mat-card-content>
             </mat-card>
         </div>
