one tournament view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
         <span>Create New</span>
       </button>
       <button mat-menu-item [routerLink]="'/tournaments/manage'">
-        <span>Manage Own</span>
+        <span>Involved</span>
       </button>
     </mat-menu>
 
