--- a/src/app/tournaments-all/tournaments-all.component.html
+++ b/src/app/tournaments-all/tournaments-all.component.html
@@ -14,8 +14,16 @@
                         </ng-container>
 
                         <ng-container matColumnDef="date_from">
-                            <th mat-header-cell *matHeaderCellDef>Date To</th>
+                            <th mat-header-cell *matHeaderCellDef>Date Start</th>
                             <td mat-cell *matCellDef="let element">{{element.date_from}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="action">
+                            <th mat-header-cell *matHeaderCellDef>Action</th>
+                            <td mat-cell *matCellDef="let element">
+                                <button mat-button (click)="openDialog(element)">Join</button>
+                                <button mat-button (click)="getTournament(element.id_tournament)">View</button>
+                            </td>
                         </ng-container>
 
                         <tr mat-header-row *matHeaderRowDef="displayNext"></tr>
@@ -42,6 +50,13 @@
                             <td mat-cell *matCellDef="let element">{{element.date_to}}</td>
                         </ng-container>
 
+                        <ng-container matColumnDef="action">
+                            <th mat-header-cell *matHeaderCellDef>Action</th>
+                            <td mat-cell *matCellDef="let element">
+                                <button mat-button (click)="getTournament(element.id_tournament)">View</button>
+                            </td>
+                        </ng-container>
+
                         <tr mat-header-row *matHeaderRowDef="displayCurrent"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayCurrent;"></tr>
                     </table>
@@ -62,8 +77,15 @@
                         </ng-container>
 
                         <ng-container matColumnDef="date_to">
-                            <th mat-header-cell *matHeaderCellDef>Date From</th>
+                            <th mat-header-cell *matHeaderCellDef>Date End</th>
                             <td mat-cell *matCellDef="let element">{{element.date_to}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="action">
+                            <th mat-header-cell *matHeaderCellDef>Action</th>
+                            <td mat-cell *matCellDef="let element">
+                                <button mat-button (click)="getTournament(element.id_tournament)">View</button>
+                            </td>
                         </ng-container>
 
                         <tr mat-header-row *matHeaderRowDef="displayPast"></tr>
