--- a/src/app/tournaments-manage/tournaments-manage.component.html
+++ b/src/app/tournaments-manage/tournaments-manage.component.html
@@ -2,16 +2,15 @@
     <div class="row">
         <div class="col-sm">
             <mat-card>
-                    <mat-card-header>
-                            <div mat-card-avatar class="own"></div>
-                            <mat-card-title>Tournaments</mat-card-title>
-                            <mat-card-subtitle>Involved in (staff, player or referee)</mat-card-subtitle>
-                        </mat-card-header>
-            <mat-tab-group>
-                <mat-tab label="Current">   
-                        
-                        <mat-card-content>
-                            <table mat-table [dataSource]="tournaments">
+                <mat-card-header>
+                    <div mat-card-avatar class="own"></div>
+                    <mat-card-title>Tournaments</mat-card-title>
+                    <mat-card-subtitle>Involved in (staff, player or referee)</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-content>
+                    <mat-tab-group>
+                        <mat-tab label="Current">   
+                            <table mat-table [dataSource]="currentDataSource">
         
                                 <ng-container matColumnDef="name">
                                     <th mat-header-cell *matHeaderCellDef>Name</th>
@@ -41,14 +40,42 @@
                                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                                 <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getTournament(row)"></tr>
                             </table>
-                        </mat-card-content>
-                    
-                </mat-tab>
-                <mat-tab label="Past">
+                        </mat-tab>
+                        <mat-tab label="Past">
+                            <table mat-table [dataSource]="pastDataSource">
 
-                </mat-tab>
-            </mat-tab-group>
-        </mat-card>
+                                <ng-container matColumnDef="name">
+                                    <th mat-header-cell *matHeaderCellDef>Name</th>
+                                    <td mat-cell *matCellDef="let element">{{element.name}}</td>
+                                </ng-container>
+        
+                                <ng-container matColumnDef="date_from">
+                                    <th mat-header-cell *matHeaderCellDef>Date From</th>
+                                    <td mat-cell *matCellDef="let element">{{element.date_from}}</td>
+                                </ng-container>
+        
+                                <ng-container matColumnDef="date_to">
+                                    <th mat-header-cell *matHeaderCellDef>Date To</th>
+                                    <td mat-cell *matCellDef="let element">{{element.date_to}}</td>
+                                </ng-container>
+        
+                                <ng-container matColumnDef="occupation">
+                                    <th mat-header-cell *matHeaderCellDef>Occupation</th>
+                                    <td mat-cell *matCellDef="let element">{{element.occupation}}/{{element.capacity}}</td>
+                                </ng-container>
+        
+                                <ng-container matColumnDef="place">
+                                    <th mat-header-cell *matHeaderCellDef>Place</th>
+                                    <td mat-cell *matCellDef="let element">{{element.place}}</td>
+                                </ng-container>
+        
+                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getTournament(row)"></tr>
+                            </table>
+                        </mat-tab>
+                    </mat-tab-group>
+                </mat-card-content>
+            </mat-card>
         </div>
     </div>
 </div>
