--- a/src/app/admin-page-dialog/admin-page-dialog.component.html
+++ b/src/app/admin-page-dialog/admin-page-dialog.component.html
@@ -1,5 +1,5 @@
 <p>Are you sure, you want delete user <b>{{data.user.name}}</b> {{data.user.id_user}}</p>
 <div mat-dialog-actions>
-  <button mat-raised-button type="submit" color="secondary" (click)="onNoClick()">No, Don't delete</button>
+  <button mat-raised-button color="secondary" (click)="onNoClick()">No, Don't delete</button>
   <button mat-raised-button style="float: right;" color="secondary" (click)="onYesClick()">Yes, Delete!</button>
 </div>
