--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -6,13 +6,14 @@
             <div mat-card-avatar class="user-image"></div>
             <mat-card-title> {{ user.name }} {{user.surname}} </mat-card-title>
             <span class="filler"></span>
-            <img height="25" width="25" src="../../assets/icons/outline_create_black_36dp.png" />
-            <img style="cursor:pointer;" (click)="openDialog(user)" height="25" width="25" src="../../assets/icons/outline_clear_black_36dp.png" />
+            <img style="cursor:pointer;" (click)="openEditDialog(user)" height="25" width="25" src="../../assets/icons/outline_create_black_36dp.png" />
+            <img style="cursor:pointer;" (click)="openDeleteDialog(user)" height="25" width="25" src="../../assets/icons/outline_clear_black_36dp.png" />
         </mat-card-header>
 
         <mat-card-content>
             <p class="txt_fields">Birth date: {{ user.birth }}</p>
-            <p class="txt_fields">Type of user: {{ user.type }}</p>
+            <p class="txt_fields">Nationality: {{ user.nationality }}</p>
+            <p class="txt_fields">Is Admin: {{ user._admin }}</p>
             <p class="txt_fields">Sex: {{ user.sex }}</p>
             <p class="txt_fields">Is left handed: {{ user._left_handed }}</p>
         </mat-card-content>
