--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,23 @@
-<div class="card-body">
-    Login
-</div>
+<mat-card>
+    <mat-card-title>Login</mat-card-title>
+    <mat-card-content>
+        <form>
+            <p>
+                <mat-form-field>
+                    Username : <input type="text" name="username" [(ngModel)]="username">
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field>
+                    Password : <input type="password" name="password" [(ngModel)]="password">
+                </mat-form-field>
+            </p>
+
+            <div class="button">
+                <button (click)=checkLogin()  mat-button>Login </button>
+            </div>
+
+        </form>
+    </mat-card-content>
+</mat-card>
