--- a/src/app/tournaments-all/tournaments-all.component.html
+++ b/src/app/tournaments-all/tournaments-all.component.html
@@ -46,7 +46,7 @@
                         </ng-container>
 
                         <ng-container matColumnDef="date_to">
-                            <th mat-header-cell *matHeaderCellDef>Date To</th>
+                            <th mat-header-cell *matHeaderCellDef>Date Till</th>
                             <td mat-cell *matCellDef="let element">{{element.date_to}}</td>
                         </ng-container>
 
