--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,12 +1,41 @@
-import { TestBed } from '@angular/core/testing';
+<mat-card>
+    <mat-card-title>Register</mat-card-title>
+    <mat-card-content>
+        <form>
+            <p>
+                <mat-form-field>
+                    UserName : <input type="text" name="username" [(ngModel)]="username">
+                </mat-form-field>
+            </p>
 
-import { AuthGaurdService } from './auth-gaurd.service';
+            <p>
+                <mat-form-field>
+                    Password : <input type="password" name="password" [(ngModel)]="password">
+                </mat-form-field>
+            </p>
 
-describe('AuthGaurdService', () => {
-    beforeEach(() => TestBed.configureTestingModule({}));
+            <p>
+                <mat-form-field>
+                    Name : <input type="text" name="name" [(ngModel)]="name">
+                </mat-form-field>
+            </p>
 
-    it('should be created', () => {
-        const service: AuthGaurdService = TestBed.get(AuthGaurdService);
-        expect(service).toBeTruthy();
-    });
-});
+            <p>
+                <mat-form-field>
+                    Surname : <input type="text" name="surname" [(ngModel)]="surname">
+                </mat-form-field>
+            </p>
+
+            <p>
+                <mat-form-field>
+                    Nationality : <input type="text" name="nationality" [(ngModel)]="nationality">
+                </mat-form-field>
+            </p>
+
+            <div class="button">
+                <button (click)=checkRegister()  mat-button>Register </button>
+            </div>
+
+        </form>
+    </mat-card-content>
+</mat-card>
