--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,7 +4,7 @@
         <form>
             <p>
                 <mat-form-field>
-                    UserName : <input type="text" name="username" [(ngModel)]="username">
+                    Username : <input type="text" name="username" [(ngModel)]="username">
                 </mat-form-field>
             </p>
 
