--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
     <div class="spacing10">
       <a mat-button [routerLink]="'/dashboard'">Home</a>
       <a mat-button [matMenuTriggerFor]="menu"> Tournaments &#9660;</a>
-      <a mat-button [routerLink]="'/login'"> Statistics </a>
-      <a mat-button [routerLink]="'/register'"> Admin </a>
+      <a mat-button [routerLink]="'/test'"> Statistics </a>
+      <a mat-button [routerLink]="'/admin'"> Admin </a>
     </div>
 
     <span class="filler"></span>
@@ -25,13 +25,13 @@
       </button>
     </mat-menu>
 
-    <img *ngIf="!logged" class="pointer" src="../assets/icons/perm_identity_36dp.png" [routerLink]="'/register'">
+    <img *ngIf="!logged" class="pointer" src="../assets/icons/perm_identity_36dp.png" [routerLink]="'/login'">
     <img *ngIf="logged" class="pointer" src="../assets/icons/how_to_reg_36dp.png" [matMenuTriggerFor]="userMenu">
 
     <mat-menu #userMenu="matMenu">
       <button mat-menu-item disabled>Logged: user</button>
       <button mat-menu-item>Settings</button>
-      <button mat-menu-item [routerLink]="'/logout'" (click)="logout()">Logout</button>
+      <button mat-menu-item (click)="logout()">Logout</button>
     </mat-menu>
 
   </mat-toolbar-row>
