--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,6 +14,14 @@
                 </mat-form-field>
             </p>
 
+            <p>
+                <mat-form-field>
+                    Don't have account?
+                    <button [routerLink]="'/register'"  mat-button>Register </button>
+                </mat-form-field>
+            </p>
+
+
             <div class="button">
                 <button (click)=checkLogin()  mat-button>Login </button>
             </div>
