--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,31 +1,32 @@
-<mat-card>
-    <mat-card-title>Login</mat-card-title>
-    <mat-card-content>
-        <form>
-            <p>
-                <mat-form-field>
-                    Username : <input type="text" name="username" [(ngModel)]="username">
-                </mat-form-field>
-            </p>
-
-            <p>
-                <mat-form-field>
-                    Password : <input type="password" name="password" [(ngModel)]="password">
-                </mat-form-field>
-            </p>
-
-            <p>
-                <mat-form-field>
+<div class="col-md-4 offset-md-1 mt-3">
+    <div class="card">
+        <h4 class="card-header">Login</h4>
+        <div class="card-body">
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                        <div *ngIf="f.username.errors.required">Username is required</div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                        <div *ngIf="f.password.errors.required">Password is required</div>
+                    </div>
+                </div>
+                <div>
                     Don't have account?
                     <button [routerLink]="'/register'"  mat-button>Register </button>
-                </mat-form-field>
-            </p>
-
-
-            <div class="button">
-                <button (click)=checkLogin()  mat-button>Login </button>
-            </div>
-
-        </form>
-    </mat-card-content>
-</mat-card>
+                </div>
+                <button [disabled]="loading" class="btn btn-primary">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                    Login
+                </button>
+                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
+            </form>
+        </div>
+    </div>
+</div>
