teams components init

--- a/src/app/tournaments-create-dialog/tournaments-create-dialog.component.html
+++ b/src/app/tournaments-create-dialog/tournaments-create-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Successfuly created!</h1>
 <div mat-dialog-content>
-    <p>You will be redirected to your new created tournament...</p>
+    <p>You will be redirected to your new created content...</p>
 </div>
 <div mat-dialog-actions>
     <button mat-raised-button color="primary" (click)="close()">Ok</button>
