--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,14 +6,15 @@
 
     <div class="spacing10">
       <a mat-button [routerLink]="'/dashboard'">Home</a>
-      <a mat-button [matMenuTriggerFor]="menu"> Tournaments &#9660;</a>
+      <a mat-button [matMenuTriggerFor]="menuTournament">Tournaments&#9660;</a>
+      <a mat-button [matMenuTriggerFor]="menuTeam">Teams&#9660;</a>
       <a mat-button [routerLink]="'/test'"> Statistics </a>
       <a mat-button [routerLink]="'/admin'"> Admin </a>
     </div>
 
     <span class="filler"></span>
 
-    <mat-menu #menu="matMenu">
+    <mat-menu #menuTournament="matMenu">
       <button mat-menu-item [routerLink]="'/tournaments/all'">
         <span>List All</span>
       </button>
@@ -21,6 +22,18 @@
         <span>Create New</span>
       </button>
       <button mat-menu-item [routerLink]="'/tournaments/manage'">
+        <span>Involved</span>
+      </button>
+    </mat-menu>
+
+    <mat-menu #menuTeam="matMenu">
+      <button mat-menu-item [routerLink]="'/teams/all'">
+        <span>List All</span>
+      </button>
+      <button mat-menu-item [routerLink]="'/teams/create'">
+        <span>Create New</span>
+      </button>
+      <button mat-menu-item [routerLink]="'/teams/manage'">
         <span>Involved</span>
       </button>
     </mat-menu>
