--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,8 +38,8 @@
       </button>
     </mat-menu>
 
-    <img *ngIf="!logged" class="pointer" src="../assets/icons/perm_identity_36dp.png" (click)="login()">
-    <img *ngIf="logged" class="pointer" src="../assets/icons/how_to_reg_36dp.png" [matMenuTriggerFor]="userMenu">
+    <img *ngIf="!globals.logged" class="pointer" src="../assets/icons/perm_identity_36dp.png" (click)="login()">
+    <img *ngIf="globals.logged" class="pointer" src="../assets/icons/how_to_reg_36dp.png" [matMenuTriggerFor]="userMenu">
 
     <mat-menu #userMenu="matMenu">
       <button *ngIf="current" mat-menu-item disabled>Logged: user</button>
