--- a/src/app/tournaments-create/tournaments-create.component.html
+++ b/src/app/tournaments-create/tournaments-create.component.html
@@ -49,7 +49,7 @@
                 <mat-form-field class="example-full-width">
                     <mat-label>Gender selection</mat-label>
                     <mat-select [(value)]="gender" formControlName="type">
-                        <mat-option value="M">Man</mat-option>
+                        <mat-option value="M">Men</mat-option>
                         <mat-option value="W">Women</mat-option>
                         <mat-option value="MW">Mixed</mat-option>
                     </mat-select>
@@ -77,7 +77,7 @@
                 </mat-form-field>
 
                 <mat-form-field class="example-full-width">
-                    <mat-label>Registration cost</mat-label>
+                    <mat-label>Registration fee</mat-label>
                     <input type="number" matInput formControlName="cost">
                     <span matPrefix>€</span>
                     <span matSuffix>*</span>
