--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,3 +1,3 @@
 <div class="card mt-4">
-    <h4 class="card-header">You're logged in! {{current_acc}}</h4>
+    <h4 class="card-header">You're logged in as {{welcome}}!</h4>
 </div>
