teams involved, join team

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
       <button mat-menu-item [routerLink]="'/tournaments/create'">
         <span>Create New</span>
       </button>
-      <button mat-menu-item [routerLink]="'/tournaments/manage'">
+      <button mat-menu-item [routerLink]="'/tournaments/involved'">
         <span>Involved</span>
       </button>
     </mat-menu>
@@ -33,7 +33,7 @@
       <button mat-menu-item [routerLink]="'/teams/create'">
         <span>Create New</span>
       </button>
-      <button mat-menu-item [routerLink]="'/teams/manage'">
+      <button mat-menu-item [routerLink]="'/teams/involved'">
         <span>Involved</span>
       </button>
     </mat-menu>
