--- a/src/app/teams-all/teams-all.component.scss
+++ b/src/app/teams-all/teams-all.component.scss
@@ -7,7 +7,7 @@ table {
     background-size: cover;
 }
 
-.mat-row:hover {
-    background-color: rgba(0, 0, 0, 0.100);
-    cursor: pointer;
-}
+// .mat-row:hover {
+//     background-color: rgba(0, 0, 0, 0.100);
+//     cursor: pointer;
+// }
