--- a/src/app/teams-manage/teams-manage.component.html
+++ b/src/app/teams-manage/teams-manage.component.html
@@ -1,1 +1,30 @@
-<p>teams-manage works!</p>
+<div class="card-body">
+    <div class="row">
+        <div class="col-sm">
+            <mat-card>
+                <mat-card-header>
+                    <div mat-card-avatar class="own"></div>
+                    <mat-card-title>Teams</mat-card-title>
+                    <mat-card-subtitle>Involved in (joined)</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-content>  
+                    <table mat-table [dataSource]="dataSource">
+
+                        <ng-container matColumnDef="name">
+                            <th mat-header-cell *matHeaderCellDef>Name</th>
+                            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="logo">
+                            <th mat-header-cell *matHeaderCellDef>Description</th>
+                            <td mat-cell *matCellDef="let element">{{element.logo}}</td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getTeam(row)"></tr>
+                    </table>  
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </div>
+</div>
