--- a/src/app/teams-one-dialog/teams-one-dialog.component.html
+++ b/src/app/teams-one-dialog/teams-one-dialog.component.html
@@ -1,9 +1,9 @@
 <div mat-dialog-content>
-    <h1>Tournament: {{data.one.name}}</h1>
+    <h1>Team: {{data.one.name}}</h1>
 </div>
 <div mat-dialog-actions>
     <div *ngIf="true">
-        <p>Do you want to delete this tournament?</p>
+        <p>Do you want to delete this team?</p>
         <button mat-raised-button (click)="close()">No</button>
         <button mat-raised-button color="primary" (click)="delete()" style="float: right;">Yes</button>
     </div>
