--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,7 @@
     <img *ngIf="globals.logged" class="pointer" src="../assets/icons/how_to_reg_36dp.png" [matMenuTriggerFor]="userMenu">
 
     <mat-menu #userMenu="matMenu">
-      <button mat-menu-item disabled>Logged: {{usrname}}</button>
+      <button mat-menu-item disabled>Logged: {{globals.loggeduser}}</button>
       <button mat-menu-item>Settings</button>
       <button mat-menu-item (click)="logout()">Logout</button>
     </mat-menu>
