--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -31,6 +31,13 @@
                         <div *ngIf="f.surname.errors.required">Surname is required</div>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label for="nationality">Nationality</label>
+                    <input type="text" formControlName="nationality" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.nationality.errors }" />
+                    <div *ngIf="submitted && f.nationality.errors" class="invalid-feedback">
+                        <div *ngIf="f.nationality.errors.required">Nationality is required</div>
+                    </div>
+                </div>
                 <button [disabled]="loading" class="btn btn-primary">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Register
