--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
       <a mat-button [matMenuTriggerFor]="menuTournament">Tournaments&#9660;</a>
       <a mat-button [matMenuTriggerFor]="menuTeam">Teams&#9660;</a>
       <a mat-button [routerLink]="'/test'"> Statistics </a>
-      <a mat-button [routerLink]="'/admin'"> Admin </a>
+      <a *ngIf="globals.isAdmin && globals.logged" mat-button [routerLink]="'/admin'"> Admin </a>
     </div>
 
     <span class="filler"></span>
