--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,18 @@
-<div class="card-body">
-    Dashboard
+<div class="card-body align-items: center">
+    <div class="row">
+        <div class="mx-auto">
+            <div class="col">
+                <div class="mx-auto">
+                    <mat-card class="example-card">
+                        <img mat-card-image src="assets/icons/dashb.png" alt="dashboard">
+                        <mat-card-content>
+                            <p>
+                                Welcome!
+                            </p>
+                        </mat-card-content>
+                    </mat-card>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
