--- a/src/app/teams-all/teams-all.component.html
+++ b/src/app/teams-all/teams-all.component.html
@@ -24,7 +24,7 @@
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef>Action</th>
                     <td mat-cell *matCellDef="let element"> 
-                        <button mat-button (click)="openDialog(element)">Join</button>
+                        <button mat-button *ngIf="globals.logged" (click)="openDialog(element)">Join</button>
                         <button mat-button (click)="getTeam(element)">View</button>
                     </td>
                 </ng-container>
