--- a/src/app/tournaments-all/tournaments-all.component.html
+++ b/src/app/tournaments-all/tournaments-all.component.html
@@ -21,7 +21,7 @@
                         <ng-container matColumnDef="action">
                             <th mat-header-cell *matHeaderCellDef>Action</th>
                             <td mat-cell *matCellDef="let element">
-                                <button mat-button (click)="openDialog(element)">Join</button>
+                                <button mat-button *ngIf="globals.logged" (click)="openDialog(element)">Join</button>
                                 <button mat-button (click)="getTournament(element.id_tournament)">View</button>
                             </td>
                         </ng-container>
