--- a/src/app/tournaments-one/tournaments-one.component.html
+++ b/src/app/tournaments-one/tournaments-one.component.html
@@ -1,6 +1,6 @@
 <div class="card-body">
-    <mat-card>
-        <img style="cursor:pointer; float: right;" height="30" width="30" (click)="openDialog()" src="../../assets/icons/outline_clear_black_36dp.png" />
+    <mat-card *ngIf="data">
+        <img *ngIf="globals.logged && ((data.id_staff == globals.loggeduserid) || (globals.isAdmin))" style="cursor:pointer; float: right;" height="30" width="30" (click)="openDialog()" src="../../assets/icons/outline_clear_black_36dp.png" />
         <mat-card-header>
             <div mat-card-avatar class="one"></div>
             <mat-card-title>Tournament: {{data ? data.name : ""}}</mat-card-title>
@@ -26,7 +26,13 @@
                         <div class="col-sm">
                             <mat-list *ngIf="data">
                                 <mat-list-item><b>{{data._singles ? "Players:" : "Teams:"}}</b></mat-list-item>
-                                <mat-list-item *ngFor="let one of accepted">{{one.id_player}}</mat-list-item>
+                                <mat-list-item *ngFor="let one of accepted">{{one.name}} {{one.surname}}</mat-list-item>
+                            </mat-list>
+                        </div>
+                        <div class="col-sm">
+                            <mat-list *ngIf="data">
+                                <mat-list-item><b>Referees</b></mat-list-item>
+                                <mat-list-item *ngFor="let one of acceptedReferees">{{one.name}} {{one.surname}}</mat-list-item>
                             </mat-list>
                         </div>
                     </div>
@@ -36,13 +42,13 @@
                     <h1>Some tab content</h1>
                     <p>...</p>
                 </mat-tab>
-                <mat-tab label="Requests" *ngIf="true">
+                <mat-tab label="Requests" *ngIf="globals.logged && ((data.id_staff == globals.loggeduserid) || (globals.isAdmin))">
                     <div class="row">
                         <div class="col-sm">
                             <mat-list *ngIf="data">
                                 <mat-list-item><b>Attendants:</b></mat-list-item>
                                 <mat-list-item *ngFor="let player of pendingPlayers">
-                                    <span class="mr-2">player1</span>
+                                    <span class="mr-2">{{player.name}} {{player.usrname}}</span>
                                     <button class="mr-2" mat-raised-button color="primary" (click)="accept(player)">Accept</button>
                                     <button mat-raised-button color="warn" (click)="decline(player)">Decline</button>
                                 </mat-list-item>
@@ -57,7 +63,7 @@
                             <mat-list *ngIf="data">
                                 <mat-list-item><b>Referees:</b></mat-list-item>
                                 <mat-list-item *ngFor="let referee of pendingReferees">
-                                    <span class="mr-2">referee1</span>
+                                    <span class="mr-2">{{referee.name}} {{referee.usrname}}</span>
                                     <button class="mr-2" mat-raised-button color="primary" (click)="accept(referee)">Accept</button>
                                     <button mat-raised-button color="warn" (click)="decline(referee)">Decline</button>
                                 </mat-list-item>
