--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -13,9 +13,9 @@
         <mat-card-content>
             <p class="txt_fields">Birth date: {{ user.birth }}</p>
             <p class="txt_fields">Nationality: {{ user.nationality }}</p>
-            <p class="txt_fields">Is Admin: {{ user._admin }}</p>
+            <p class="txt_fields">Is Admin: {{ user.is_admin }}</p>
             <p class="txt_fields">Sex: {{ user.sex }}</p>
-            <p class="txt_fields">Is left handed: {{ user._left_handed }}</p>
+            <p class="txt_fields">Is left handed: {{ user.is_left_handed }}</p>
         </mat-card-content>
     </mat-card>
 </div>
