--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
 
     <mat-menu #userMenu="matMenu">
       <button mat-menu-item disabled>Logged: {{globals.loggeduser}}</button>
-      <button mat-menu-item>Settings</button>
+      <button [routerLink]="'/edit'" mat-menu-item>Edit Profile</button>
       <button mat-menu-item (click)="logout()">Logout</button>
     </mat-menu>
 
