--- a/src/app/statistics/statistics.component.scss
+++ b/src/app/statistics/statistics.component.scss
@@ -9,5 +9,12 @@ table {
 
 .mat-row:hover {
     background-color: rgba(0, 0, 0, 0.100);
-    cursor: pointer;
+}
+
+.search {
+    margin-top: 2em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25em;
 }
